opam-version: "1.2"
maintainer:   "datakit@docker.com"
authors:      ["Thomas Leonard" "David Scott"]
license:      "Apache"
homepage:     "https://github.com/mirage/prometheus"
bug-reports:  "https://github.com/mirage/prometheus/issues"
dev-repo:     "https://github.com/mirage/prometheus.git"
doc:          "https://mirage.github.io/prometheus/"

build: [
  [ "dune" "subst" ] {pinned}
  [ "dune" "build" "-p" name "-j" jobs ]
]

build-test: [
  [ "dune" "runtest" "-p" name "-j" jobs ]
]

depends: [
  "dune"  {build & >= "1.0"}
  "prometheus"
  "fmt"
  "re"
  "cohttp" {>="1.0.0"}
  "cohttp-lwt"
  "cohttp-lwt-unix"
  "lwt" {>="2.5.0"}
  "cmdliner"
  "alcotest" {test}
]
available: [ocaml-version >= "4.02.3"]
