opam-version: "2.0"
synopsis: "Client library for Prometheus monitoring"
maintainer: "talex5@gmail.com"
authors: ["Thomas Leonard" "David Scott"]
license: "Apache"
homepage: "https://github.com/mirage/prometheus"
doc: "https://mirage.github.io/prometheus/"
bug-reports: "https://github.com/mirage/prometheus/issues"
depends: [
  "ocaml" {>= "4.02.3"}
  "dune" {>= "1.0"}
  "prometheus"
  "fmt"
  "re"
  "cohttp" {>= "1.0.0"}
  "cohttp-lwt"
  "cohttp-lwt-unix"
  "lwt" {>= "2.5.0"}
  "cmdliner"
  "alcotest" {with-test}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/mirage/prometheus.git"
