opam-version: "2.0"
synopsis: "Lwt support for Prometheus monitoring"
description: """\
Serve Prometheus metrics from an Lwt application. Provides Lwt collectors,
an Lwt-returning collection function, the Lwt timing helpers, and a cohttp
callback. The `prometheus-lwt.unix` library adds a cmdliner option and a
pre-configured cohttp-lwt-unix web-server.

Metric recording lives in the backend-free `prometheus` core; this package
is only needed by applications that serve metrics over Lwt."""
maintainer: "talex5@gmail.com"
authors: ["Thomas Leonard" "David Scott"]
license: "Apache-2.0"
homepage: "https://github.com/mirage/prometheus"
doc: "https://mirage.github.io/prometheus/"
bug-reports: "https://github.com/mirage/prometheus/issues"
depends: [
  "ocaml" {>= "4.08"}
  "dune" {>= "2.3"}
  "prometheus" {= version}
  "prometheus-app" {= version}
  "prometheus-cohttp" {= version}
  "fmt" {>= "0.8.7"}
  "re"
  "asetmap"
  "astring"
  "cohttp-lwt" {>= "6.0.0"}
  "cohttp-lwt-unix" {>= "6.0.0"}
  "lwt" {>= "2.5.0"}
  "cmdliner"
  "logs" {>= "0.6.0"}
  "alcotest" {with-test}
  "alcotest-lwt" {with-test}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/mirage/prometheus.git"
