opam-version: "2.0"
synopsis: "Client library for Prometheus monitoring"
maintainer: "talex5@gmail.com"
authors: ["Thomas Leonard" "David Scott"]
license: "Apache"
homepage: "https://github.com/mirage/prometheus"
doc: "https://mirage.github.io/prometheus/"
bug-reports: "https://github.com/mirage/prometheus/issues"
depends: [
  "ocaml" {>= "4.01.0"}
  "dune" {>= "1.0"}
  "astring"
  "asetmap"
  "fmt"
  "re"
  "lwt" {>= "2.5.0"}
  "alcotest" {with-test}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
dev-repo: "git+https://github.com/mirage/prometheus.git"
