(library
 (name prometheus_app)
 (public_name prometheus-app)
 (libraries prometheus cohttp-eio astring asetmap fmt re)
 (modules Prometheus_app)
 (wrapped false))

(library
 (name prometheus_app_unix)
 (public_name prometheus-app.unix)
 (libraries prometheus prometheus-app cmdliner cohttp-eio eio eio.unix logs.fmt fmt.tty)
 (modules Prometheus_unix)
 (wrapped false))
